<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_main_background"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/btnPlay"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/playbtn"
        android:contentDescription="@string/play_games" />

    <ImageView
        android:id="@+id/btnLeader"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnProfile"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:srcCompat="@drawable/leaderboardbtn"
        android:contentDescription="@string/view_leader_board" />

    <ImageView
        android:id="@+id/btnHistory"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:srcCompat="@drawable/history"
        android:contentDescription="@string/view_history" />

    <ImageView
        android:id="@+id/btnProfile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHistory"
        app:layout_constraintStart_toEndOf="@+id/btnHistory"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/view_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>