<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.leaderBoard.LeaderBoardActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leader_board_background"
        android:contentDescription="@string/background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top3Board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/whiteTransparentBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnBackLB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/title_holder"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:text="@string/leader_board"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/board_fetch_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/board_fetch_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/rancho"
        android:text="@string/no_record_found"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_fetch_progress" />


<!--    <ScrollView-->
<!--        android:id="@+id/userBoard"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:background="@color/whiteTransparentBackground"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btnBackLB"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.77"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/top3Board">-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/userPosition"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

<!--    </ScrollView>-->

    <Button
        android:id="@+id/btnBackLB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/whiteTransparentButton"
        android:fontFamily="@font/rancho"
        android:text="@string/back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>