<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kidzplaying" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/title_holder"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_border_brown"
        android:padding="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rancho"
                android:hint="username"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="134dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rancho"
                android:hint="password"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="134dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/ilUsername"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rancho"
                android:hint="full name"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="134dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/ilUsername"
            app:layout_constraintTop_toBottomOf="@+id/ilFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rancho"
                android:hint="email"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="134dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rancho"
            android:text="Gender:"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/ilUsername"
            app:layout_constraintTop_toBottomOf="@+id/ilEmail" />

        <ToggleButton
            android:id="@+id/btnGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/button_shadow_press"
            android:text="ToggleButton"
            android:textOff="Female"
            android:textOn="Male"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnEditBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rancho"
            android:textSize="24sp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/design_default_color_on_secondary"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnEditUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/rancho"
            android:text="Update"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>